<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="data"
            type="com.pzx.canteen.newApp.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.pzx.canteen.scan.FinderView
            android:id="@+id/finder_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_valid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/voucher_valid"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="150sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_invalid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/voucher_invalid"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="150sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/bt_signOut"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@drawable/button_circle_shape"
            android:text="@string/sign_out"
            android:textColor="@android:color/white"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/surface_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>