<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_BKG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bkg"
    android:keepScreenOn="true"
    android:gravity="end"
    android:orientation="vertical">
    <Button
        android:id="@+id/bt_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_circle_shape"
        android:text="@string/sign_out"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explanation"
            android:textColor="#333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:shadowColor="#ffffff"
                android:shadowDx="5"
                android:shadowDy="-5"
                android:shadowRadius="1"
                android:text="@string/start_scan_qrcode"
                android:textColor="#03A9F4"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:textColor="#ff0000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textUri" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_valid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="有效"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="200sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_invalid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="无效"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="200sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>
    <Button
        android:id="@+id/bt_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:text="@string/switch_scan_device"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>